Sun Oct  7 17:05:54 BST 2007  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.0.
	* configure.ac, docs/NEWS, man-db.lsm: Update.

Sun Oct  7 17:01:47 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (ja_name): Add another possible translation.

Sun Oct  7 15:19:15 BST 2007  Colin Watson  <cjwatson@debian.org>

	* manual/Makefile.in (distclean): Remove Makefile.

Sun Oct  7 14:28:27 BST 2007  Colin Watson  <cjwatson@debian.org>

	* po/man-db.pot, po/*.po: Update.

Sun Oct  7 14:24:31 BST 2007  Ming Hua  <minghua-guest@users.alioth.debian.org>

	* po/zh_CN.po: New translation.
	* po/LINGUAS: Add zh_CN.
	* man/THANKS: Add translator credit.

Wed Sep 26 17:57:44 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/util.c (escape_shell): '=' is conceivably a shell
	  metacharacter if used in the first word of a command (although I
	  can't see anywhere in man-db where this might actually happen,
	  barring very unlikely settings of $BROWSER).

Wed Sep 26 17:51:45 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (look_for_file): Don't escape the hierarchy path;
	  it isn't necessary and it causes problems for paths containing
	  metacharacters (Debian bug #444187).
	* src/globbing.h (look_for_file): Update prototype.

Tue Sep 18 11:29:26 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po4a.cfg: Add po4a mechanism for manual page translation,
	  as the Simplified Chinese translator would like to use this.
	* man/po4a/po/man-db.pot: Add generated file.

	* man/man1/apropos.man1, man/man1/lexgrog.man1, man/man1/man.man1,
	  man/man1/manconv.man1, man/man1/manpath.man1,
	  man/man1/whatis.man1, man/man1/zsoelim.man1,
	  man/man5/manpath.man5, man/man8/accessdb.man8,
	  man/man8/catman.man8, man/man8/mandb.man8: Some strings should not
	  be translated. Use the ".if !'po4a'hide'" idiom to mark them.
	* man/man1/man.man1 (OVERVIEW): Adjust some spacing.

Tue Sep 18 08:59:55 BST 2007  Colin Watson  <cjwatson@debian.org>
