@@ -51,8 +51,8 @@ USE_NLS = @USE_NLS@
 # GNUmakefile and include/Defines are automatic targets, don't add below.
 INCLUDES := config.h $(addprefix include/, manconfig.h comp_src.h)
 CONF = src/man_db.conf
-EVERYTHING = intl lib libdb src man po
-ALL = intl lib libdb src man po
+EVERYTHING = intl lib libdb src man manual po
+ALL = intl lib libdb src man manual po
 INSTALL = src man intl po
 
 include include/Defines
@@ -64,7 +64,7 @@ export DESTDIR
 	check deroff
         
 ifneq ($(USE_NLS),yes)
-  ALL = lib libdb src man
+  ALL = lib libdb src man manual
   INSTALL = src man
 endif # USE_NLS != yes
 
@@ -182,7 +182,7 @@ ifeq ($(srcdir),.)
 # Sorry folks, can only make a dist from the $(srcdir)
 
 # The files in the distribution
-_subdirs = $(EVERYTHING) tools docs include manual m4
+_subdirs = $(EVERYTHING) tools docs include m4
 
 _all = */README
 _root = ABOUT-NLS README autogen.sh configure configure.ac *.m4 *.in man-db.*
